--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Be-KRAF</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-</head>
-<body>
-<h2>Yolloooo rubah</h2>
-</body>
-</html>
+Hello!
