update index lagi dan lagi

--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-Hello World!
-QOWOWOWOWOWOOWOOWOOWOYOWOYOWYOO
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+<h1>SAHUUR</h1>
+</body>
+</html>
